WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159364
Regression(
r199087
): window.focus() / window.close() can no longer be called by a Window's opener
https://bugs.webkit.org/show_bug.cgi?id=159364
Summary
Regression(r199087): window.focus() / window.close() can no longer be called ...
Chris Dumez
Reported
2016-07-01 13:16:59 PDT
Regression(
r199087
): window.focus() / window.close() can no longer be called by a Window's opener. This broke focusing of open iWork documents on icloud.com.
Attachments
Patch
(17.90 KB, patch)
2016-07-01 13:32 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-yosemite
(915.72 KB, application/zip)
2016-07-01 14:25 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews104 for mac-yosemite-wk2
(901.53 KB, application/zip)
2016-07-01 14:28 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews124 for ios-simulator-wk2
(628.21 KB, application/zip)
2016-07-01 14:35 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews116 for mac-yosemite
(1.45 MB, application/zip)
2016-07-01 14:42 PDT
,
Build Bot
no flags
Details
Patch
(20.00 KB, patch)
2016-07-01 15:43 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(20.04 KB, patch)
2016-07-01 16:22 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-07-01 13:17:36 PDT
<
rdar://problem/27117169
>
Chris Dumez
Comment 2
2016-07-01 13:32:06 PDT
Created
attachment 282573
[details]
Patch
Chris Dumez
Comment 3
2016-07-01 14:17:33 PDT
Comment on
attachment 282573
[details]
Patch Looks like my new test times out on the bots, I will investigate.
Build Bot
Comment 4
2016-07-01 14:25:38 PDT
Comment on
attachment 282573
[details]
Patch
Attachment 282573
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1609058
New failing tests: fast/dom/Window/child-window-focus.html
Build Bot
Comment 5
2016-07-01 14:25:42 PDT
Created
attachment 282578
[details]
Archive of layout-test-results from ews100 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 6
2016-07-01 14:28:17 PDT
Comment on
attachment 282573
[details]
Patch
Attachment 282573
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1609063
New failing tests: fast/dom/Window/child-window-focus.html
Build Bot
Comment 7
2016-07-01 14:28:21 PDT
Created
attachment 282580
[details]
Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 8
2016-07-01 14:35:03 PDT
Comment on
attachment 282573
[details]
Patch
Attachment 282573
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1609068
New failing tests: fast/dom/Window/child-window-focus.html
Build Bot
Comment 9
2016-07-01 14:35:07 PDT
Created
attachment 282583
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 10
2016-07-01 14:42:46 PDT
Comment on
attachment 282573
[details]
Patch
Attachment 282573
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1609070
New failing tests: fast/dom/Window/child-window-focus.html
Build Bot
Comment 11
2016-07-01 14:42:51 PDT
Created
attachment 282585
[details]
Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Chris Dumez
Comment 12
2016-07-01 15:43:22 PDT
Created
attachment 282596
[details]
Patch
Chris Dumez
Comment 13
2016-07-01 16:01:25 PDT
Can be manually validated at
http://www.plus2net.com/javascript_tutorial/blur-demo.php
as well.
Chris Dumez
Comment 14
2016-07-01 16:22:04 PDT
Created
attachment 282604
[details]
Patch
Chris Dumez
Comment 15
2016-07-01 16:22:50 PDT
Comment on
attachment 282604
[details]
Patch Clearing flags on attachment: 282604 Committed
r202761
: <
http://trac.webkit.org/changeset/202761
>
Chris Dumez
Comment 16
2016-07-01 16:22:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug