Regression(r199087): window.focus() / window.close() can no longer be called by a Window's opener https://bugs.webkit.org/show_bug.cgi?id=159364 <rdar://problem/27117169>

Reviewed by Gavin Barraclough.

Source/WebCore:

window.focus() / window.close() could no longer be called by a Window's opener
after r199087, which would break focusing of open iWork documents on icloud.com.

Before r199087, we would construct a new function in the caller's context every
time window.focus and window.close was accessed. r199087 fixed the issue so that
we always call the same function. However, those functions are using
[CallWith=Document] and they are were no longer passed the *caller*'s document
as a result. This broke focus / close permission checking as the code needed the
caller's document to do the check.

This patch introduces [CallWith=CallerDocument] and [CallWith=CallerWindow] so
that the implementation can now pass the caller's Document / Window to the
implementation. The bindings rely on JSDOMWindow's callerDOMWindow() to get the
caller DOMWindow / document. This new functionality is now used for window.close
and window.focus to unbreak their permission checking.

Test: fast/dom/Window/child-window-focus.html

* bindings/scripts/CodeGeneratorJS.pm:
(GenerateCallWith):
* bindings/scripts/IDLAttributes.txt:
* page/DOMWindow.cpp:
(WebCore::DOMWindow::focus):
* page/DOMWindow.h:
* page/DOMWindow.idl:

LayoutTests:

Add layout test coverage.

* fast/dom/Window/child-window-focus-expected.txt: Added.
* fast/dom/Window/child-window-focus.html: Added.

Canonical link: https://commits.webkit.org/177492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202761 268f45cc-cd09-0410-ab3c-d52691b4dbfc